@@ -4,7 +4,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import de.tum.cit.aet.artemis.core.exception.localvc.LocalVCInternalException;
 import de.tum.cit.aet.artemis.programming.domain.VcsRepositoryUri;
@@ -73,7 +72,7 @@ public class LocalVCRepositoryUri extends VcsRepositoryUri {
             throw new LocalVCInternalException("Could not create local VC Repository URI", e);
         }
 
-        var urlPath = Paths.get(this.uri.getPath());
+        var urlPath = Path.of(this.uri.getPath());
 
         // Find index of "git" in the path. This is needed in case the base URL contains a path.
         final var startIndex = getGitPartStartIndex(urlString, urlPath);
@@ -147,12 +146,12 @@ public class LocalVCRepositoryUri extends VcsRepositoryUri {
      * </p>
      * <ul>
      * <li>
-     * Input: Local repository path - {@code Paths.get("/local/path/projectX/my-repo/.git")}
+     * Input: Local repository path - {@code Path.of("/local/path/projectX/my-repo/.git")}
      * and Local VC server URL - {@code new URI("https://artemis.tum.de").getURL()}
      * Output: {@code https://artemis.tum.de/git/projectX/my-repo.git}
      * </li>
      * <li>
-     * Input: Remote repository path - {@code Paths.get("/remote/path/projectY/my-repo")}
+     * Input: Remote repository path - {@code Path.of("/remote/path/projectY/my-repo")}
      * and Local VC server URL - {@code new URI("https://artemis.tum.de").getURL()}
      * Output: {@code https://artemis.tum.de/git/projectY/my-repo.git}
      * </li>
@@ -291,6 +290,6 @@ public class LocalVCRepositoryUri extends VcsRepositoryUri {
      * @return The relative Path to the repository, which includes the project key and repository slug with a ".git" suffix.
      */
     public Path getRelativeRepositoryPath() {
-        return Paths.get(projectKey, repositorySlug + ".git");
+        return Path.of(projectKey, repositorySlug + ".git");
     }
 }
